sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  for (i <- getNombreValeurs() - 2 to 0){
    for (j <-  to i){
      if (plusPetit(j+,j){
        echange(j,j+)
      }
    }
  }
  }
